<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.adminActivities.RegisterInstructorActivity">

    <EditText
        android:id="@+id/et_administrator_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_phone"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_phone" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_administrator_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_surname"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_surname"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_surname" />

    <EditText
        android:id="@+id/et_administrator_register_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_password"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_password"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_password" />

    <Button
        android:id="@+id/bt_administrator_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_background"
        android:clickable="true"
        android:focusable="true"
        android:text="zarejestruj instruktora"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_repeat_password"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_repeat_password" />

    <EditText
        android:id="@+id/et_administrator_register_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_email"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_email"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_email" />

    <EditText
        android:id="@+id/et_administrator_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/et_administrator_register_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_administrator_register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_administrator_register_name"
        app:layout_constraintTop_toBottomOf="@+id/et_administrator_register_name" />
</androidx.constraintlayout.widget.ConstraintLayout>