<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.userActivities.UserProfileActivity">

    <Button
        android:id="@+id/bt_save_instructor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        android:text="Zapisz zmiany"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_user_profile_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_user_profile_email"
        app:layout_constraintTop_toBottomOf="@+id/et_user_profile_email" />

    <EditText
        android:id="@+id/et_user_profile_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_profile_surname"
        app:layout_constraintStart_toStartOf="@+id/et_user_profile_surname"
        app:layout_constraintTop_toBottomOf="@+id/et_user_profile_surname" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView4"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.498"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:src="@drawable/profilowe2"
        android:layout_width="169dp"
        android:layout_height="188dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/profilowe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/et_user_profile_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_profile_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/et_user_profile_name" />

    <Button
        android:id="@+id/bt_reset_instructor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        android:text="Zresetuj hasło"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/bt_save_instructor2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bt_save_instructor2"
        app:layout_constraintTop_toBottomOf="@+id/bt_save_instructor2" />

    <EditText
        android:id="@+id/et_user_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_profile_phone"
        app:layout_constraintStart_toStartOf="@+id/et_user_profile_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_user_profile_phone" />
</androidx.constraintlayout.widget.ConstraintLayout>